Improve/add dtos (#44)
* add missing dtos for controllers

* fix json date format

* update mobile services to call correct types
