# backend/src/recipes/recipes.controller.ts
@@ -3,7 +3,9 @@ import { RecipesService } from './recipes.service';
 import {
   SupabaseGuard,
   type AuthenticatedRequest,
-} from 'src/supabase-guard/supabase.guard';
+} from '../supabase-guard/supabase.guard';
+import { ZodResponse } from 'nestjs-zod';
+import { GetRecipeResponseDto } from './recipes.dto';
 
 @Controller('recipes')
 @UseGuards(SupabaseGuard)
@@ -11,6 +13,7 @@ export class RecipesController {
   constructor(private recipesService: RecipesService) {}
 
   @Get(':id')
+  @ZodResponse({ status: 200, type: GetRecipeResponseDto })
   async findRecipeWithIngredientsById(
     @Req() req: AuthenticatedRequest,
     @Param('id') recipeId: string,
