# backend/src/saved-recipes/saved-recipes.dto.ts
@@ -1,5 +1,6 @@
 import { createZodDto } from 'nestjs-zod';
 import { z } from 'zod';
+import { RecipeSchema } from '../recipes/recipes.dto';
 
 const AddToSavedRecipesRequestSchema = z.object({
   messageContent: z.string(),
@@ -26,4 +27,33 @@ const RemoveFromSavedRecipesRequestSchema = z.object({
 
 export class RemoveFromSavedRecipesRequestDto extends createZodDto(
   RemoveFromSavedRecipesRequestSchema,
+) {}
+
+const SavedRecipeBaseSchema = z.object({
+  recipeId: z.string(),
+  userId: z.string(),
+  plannedFor: z.coerce.string(),
+  createdAt: z.coerce.string(),
+  isInGroceryList: z.boolean(),
+  servings: z.number(),
+});
+
+const GetSavedRecipesResponseSchema = z.array(
+  SavedRecipeBaseSchema.extend({ recipe: RecipeSchema }),
+);
+
+export type GetSavedRecipesResponse = z.output<
+  typeof GetSavedRecipesResponseSchema
+>;
+
+export class GetSavedRecipesResponseDto extends createZodDto(
+  GetSavedRecipesResponseSchema,
+) {}
+
+export type RemoveFromSavedRecipesResponse = z.output<
+  typeof SavedRecipeBaseSchema
+>;
+
+export class RemoveFromSavedRecipesResponseDto extends createZodDto(
+  SavedRecipeBaseSchema,
 ) {}
